Add PUT /studies/:id and fix GET /studies
